@@ -22,6 +22,7 @@
 
   <!-- Style -->
   <copy css:theme="head style">
+    <xsl:text disable-output-escaping="yes">
       body { padding-top: 80px; }
       button + button { margin-left: .5em; }
       .ploneCalendar { width: 100%; }
@@ -42,6 +43,7 @@
       #portal-columns, #portal-header { margin-bottom: 2em; }
       #kss-spinner { display: none; }
       input[type='checkbox'] { margin-right: .5em; }
+    </xsl:text>
   </copy>
 
   <!-- Body rules
